--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "lambda-logger-example",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && serverless offline start",
-    "start-api": "node --inspect ./node_modules/.bin/serverless offline start"
+    "prep": "npm i",
+    "start": "tsc && serverless offline start"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.0.27",
-    "@zackheil/lambda-logger": "0.0.8-e835e5be.0",
-    "aws-sdk": "^2.601.0",
-    "fs": "0.0.1-security"
+    "@zackheil/lambda-logger": "0.0.8-ec4cb875.0",
+    "aws-sdk": "^2.601.0"
   },
   "devDependencies": {
     "serverless": "^1.78.0",
