--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.0.27",
-    "@zackheil/lambda-logger": "0.0.8-ec4cb875.0",
+    "@zackheil/lambda-logger": "0.1.1",
     "aws-sdk": "^2.601.0"
   },
   "devDependencies": {
